# strling

./: .gitattributes  .gitignore  AUDIT_CONFORMANCE_ANALYSIS.md  ECOSYSTEM_STATUS.md  FINAL_AUDIT_REPORT.md  LICENSE  LICENSE.txt  PROJECT_STATE_AUDIT.md  README.md  SECURITY.md  package.json  r_output.txt  strling  strling.ps1  toolchain.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml  task.md
.github/workflows/: cd.yml  ci.yml  spec-ci.yml
bindings/c/: .gitignore  README.md  setup.sh
bindings/cpp/: CMakeLists.txt  conanfile.py
bindings/cpp/test/: CMakeLists.txt
bindings/cpp/test/unit/: anchors_test.cpp  e2e_test.cpp  errors_test.cpp  flags_and_free_spacing_test.cpp  interaction_test.cpp
bindings/csharp/: README.md
bindings/dart/: README.md  pubspec.yaml
bindings/fsharp/: README.md
bindings/go/: README.md  ast.go  conformance_test.go  go.mod
bindings/java/: README.md  pom.xml
bindings/kotlin/: README.md  build.gradle.kts
bindings/lua/: README.md  run_tests.sh  setup.sh  strling-3.0.0-1.rockspec  strling-3.0.0-alpha-1.rockspec  strling-3.0.0alpha-1.rockspec
bindings/perl/: Makefile.PL  README.md  dist.ini  setup.sh
bindings/php/: .gitignore  README.md  composer.json
bindings/python/: .gitignore  README.md  pyproject.toml
bindings/r/: DESCRIPTION  README.md  run_tests.R  setup.R
bindings/ruby/: README.md  strling.gemspec
bindings/rust/: .gitignore  Cargo.toml  README.md  build.rs
bindings/swift/: README.md
docs/: OFFICIAL_PUBLICATION_STEPS.md  architecture.md  ci_cd_setup.md  guidelines.md  index.md  project_architecture_strategy.md  releasing.md  testing_design.md  testing_setup.md  testing_workflow.md
research/: RegEx vs. STRling Developer Adoption.md  Regex Maintainability and Cognitive Cost.md  STRling Linter Architecture_ Derivatives vs. Graph.md
spec/: README.md  features.json
tests/: README.md
tooling/: audit_conformance.py  audit_hints.py  audit_omega.py  audit_precision.py  check_version_exists.py  index.md  sync_versions.py
(+180 files in other folders)
